# ByteForge

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
examples/: benchmark.cpp  bundle.cpp  main.cpp
include/byteforge/: block.hpp  bundle.hpp
src/: block.cpp  bundle.cpp
